--- a/D3_data_journalism/StarterCode/assets/css/style.css
+++ b/D3_data_journalism/StarterCode/assets/css/style.css
@@ -14,6 +14,12 @@ body {
   padding-bottom: 80px;
 }
 
+#map {
+  margin-left: 280px;
+  height: 450px;
+  width: 840px
+}
+
 #footer {
   position: absolute;
   bottom: 0;
