--- a/D3_data_journalism/StarterCode/assets/css/style.css
+++ b/D3_data_journalism/StarterCode/assets/css/style.css
@@ -14,8 +14,16 @@ body {
   padding-bottom: 80px;
 }
 
+#health_factor {
+
+}
+
+#btn {
+  margin-left: 20px;
+}
+
 #map {
-  margin-left: 280px;
+  margin-top: 30px;
   height: 450px;
   width: 840px
 }
