--- a/StarterCode/assets/css/style.css
+++ b/StarterCode/assets/css/style.css
@@ -14,6 +14,28 @@ body {
   padding-bottom: 80px;
 }
 
+.menu {
+  background-color: #90C1D6;
+  height: 44px;
+  width: 100%;
+}
+
+.header {
+  position: relative;
+  margin-top: 0px;
+  padding-top: 4px;
+  padding-left: 325px;
+  display: inline-block;
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: white !important;
+  font-weight: bold;
+}
+
+.header:hover {
+  text-decoration: none;
+}
+
 #map {
   margin-top: 30px;
   height: 450px;
