--- a/StarterCode/static/css/style2.css
+++ b/StarterCode/static/css/style2.css
@@ -49,4 +49,5 @@ body {
 .description {
   display: inline;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
 }
